Add pairing flow and integration with PetSafe API. not functioning as of now.

--- a/app.json
+++ b/app.json
@@ -63,7 +63,14 @@
       },
       "pair": [
         {
-          "id": "email"
+          "id": "prepare_pair",
+          "template": "loading"
+        },
+        {
+          "id": "email",
+          "navigation": {
+            "next": "pincode"
+          }
         },
         {
           "id": "pincode",
@@ -73,11 +80,17 @@
             "hint": "Enter the pincode you received in your email",
             "type": "number",
             "length": 8
+          },
+          "navigation": {
+            "next": "getting_tokens"
           }
         },
         {
-          "id": "loading",
-          "template": "loading"
+          "id": "getting_tokens",
+          "template": "loading",
+          "navigation": {
+            "next": "list_devices"
+          }
         },
         {
           "id": "list_devices",
@@ -88,7 +101,10 @@
         },
         {
           "id": "add_devices",
-          "template": "add_devices"
+          "template": "add_devices",
+          "navigation": {
+            "next": "done"
+          }
         },
         {
           "id": "done",
